Funcionalidad a los componentes, y Creacion de Estilos

--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#97ca3f" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/react192.png" />
-   
+    <meta name="description" content="Web site created using create-react-app"/>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/react192.png" /> 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Montserrat:wght@100;200;300;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet"> 
     
-    <title>React App</title>
+    <title>Todo Machine</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
