--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Montserrat:wght@100;200;300;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;500&display=swap" rel="stylesheet"> 
     
     <title>Todo Machine</title>
   </head>
